package com.eventsystem.domain.member;

public enum MemberStatus {
    ACTIVE,
    SUSPENDED,
    CANCELLED
}
