package com.eventsystem.domain.member;

public enum NotificationType {
    PURCHASE_COMPLETED,
    EVENT_CANCELLED,
    ORDER_EXPIRING,
    SOLD_OUT,
    COMPANY_SUSPENDED,
    COMPANY_TERMINATED,
    COMPANY_REOPENED,
    ROLE_CHANGED,
    LOTTERY_WON,
    PURCHASE_FAILED,
    QUEUE_TURN_ARRIVED
}
