package com.eventsystem.domain.platform;

public enum PlatformStatus {
    INITIALIZING,
    ACTIVE,
    SHUTDOWN
}
